# HPC_TP4

./: CMakeLists.txt  ex2.cpp  hpcOpenmpSchedule.cpp  readme.md  stats.ods
Exercice_2/: ex2.cpp
Exercice_3/: CMakeLists.txt
Exercice_3/Scenes/: obj2nff  obj2nff.cpp  scene01.txt  scene02.txt
Exercice_3/Src/: Camera.cpp  Couleur.cpp  Image.cpp  Image.hpp  Intensite.cpp  Materiau.hpp  Objet.cpp  Plan.hpp  Point.cpp  Rayon.cpp  Rayon.hpp  Source.cpp  Sphere.cpp  Vecteur.cpp  lr.cpp
RayTracing/Scenes/: out.txt  scene03.txt
RayTracing/Src/: Camera.cpp  Camera.hpp  Couleur.hpp  Intensite.hpp  Intersection.cpp  Intersection.hpp  Materiau.cpp  Objet.hpp  Plan.cpp  Point.hpp  Scene.cpp  Scene.hpp  Source.hpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Vecteur.hpp  lr.cpp
